# mtl-c2pa-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mtl_c2pa_mcp/: __init__.py  __main__.py  c2pa.py  server.py
tests/: test_c2pa.py
