[project]
name = "mtl-c2pa-mcp"
version = "0.1.0"
description = "MCP server for reading C2PA content provenance manifests from media files (MP3, JPG, PNG, MP4, etc.)"
authors = [
    {name = "MusicTech Lab"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "c2pa-python>=0.32.0,<1.0.0",
]

[tool.poetry]
packages = [{include = "mtl_c2pa_mcp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
